<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Theme Demo</string>

    <string name="textView">Team 1</string>
    <string name="textView1">Team2</string>
    <string name="score1">0</string>
    <string name="description">Error</string>
    <string name="mniTheme" tools:keep="@string/mniTheme">Change Theme</string>
    <string name="plus">Button Plus</string>
    <string name="minus">Button Minus</string>
</resources>
